@@ -227,10 +227,7 @@
       <table>
         <search base="basesearch">
           <query>| `cs_filter_savedsearches("Sophos|Windows Defender|CrowdStrike")` 
-| eval Name=if(Name="Sophos Service is not Running","Sophos Service Stopped/Disabled Events",Name) 
-| eval Name=if(Name="Sophos RealTime Protection Disabled","Sophos RealTime Protection Stopped/Disabled Events",Name) 
-| eval Name=if(Name="Endpoint Not Protected by Windows Defender","Windows Defender Endpoint Stopped/Disabled Events",Name) 
-| eval Name=if(Name="Windows Defender RealTime Protection Disabled or Failed","Windows Defender RealTime Protection Stopped/Disabled/Failed Events",Name) 
+| eval Name=case(Name=="Sophos Service is not Running","Sophos Service Stopped/Disabled Events",Name=="Sophos RealTime Protection Disabled","Sophos RealTime Protection Stopped/Disabled Events",Name=="Endpoint Not Protected by Windows Defender","Windows Defender Endpoint Stopped/Disabled Events",Name=="Windows Defender RealTime Protection Disabled or Failed","Windows Defender RealTime Protection Stopped/Disabled/Failed Events",true(),Name) 
 | rename "Notable Events" as Count 
 | append 
     [| search `cs_sophos` type IN ("Event::Endpoint::ServiceNotRunning", "Event::Endpoint::ServiceRestored") dhost IN ("*") user IN ("*") earliest=$timeRange.earliest$ latest=$timeRange.latest$
